Update baseline DpRuntime.java to match Java 8-compatible isBlank() fix
Keeps the regression test baseline in sync with the DpRuntimeWriter change.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_016mPvNLJjprvFmwahfGYkq7